# agent-browser

./: CHANGELOG.md  package.json
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: commands.rs  connection.rs  flags.rs  main.rs  output.rs
cli/src/native/: actions.rs  browser.rs  e2e_tests.rs  state.rs
cli/src/native/cdp/: chrome.rs  types.rs
docs/src/app/changelog/: page.mdx
